[package]
name = "astm_comms"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "astm_comms"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
serde = "1.0.162"
serialport = "4.2.0"
tokio = { version = "1.28.0", features = ["full"] }
